# password-manager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
.github/workflows/: freebsd.yml  linux.yml  mingw.yml  msys2.yml
cmake/: arm-none-eabi.cmake  check-.cmake  check.cmake  mingw32.cmake  mingw64.cmake  sanitizer.cmake  value.cmake
include/: m_generate.h  m_info.h  m_io.h  m_json.h  m_key.h  m_sqlite.h  m_word.h
lib/: CMakeLists.txt
lib/cjson/: CMakeLists.txt
lib/sqlite3/: CMakeLists.txt
src/: m_generate.c  m_info.c  m_io.c  m_json.c  m_key.c  m_sqlite.c  m_word.c
src/cli/: app.c  app.h  clipboard.c  clipboard.h  console.c  console.h  convert.c  convert.h  main.c  path.c  path.h
test/: CMakeLists.txt  generate.c  info.c  json.c  key.c  sqlite.c  word.c
tests/: CMakeLists.txt  generate.c  info.c  json.c  key.c  sqlite.c  word.c
